Implement feedback from defence with LF
